fix vertical alignment

--- a/user.css
+++ b/user.css
@@ -30,11 +30,6 @@ html, body {
   margin: -20px -20px 20px;
 }
 
-/* Styles you shouldn't keep as they are for displaying this base example only */
-.content .span10,
-.content .span4 {
-  min-height: 500px;
-}
 /* Give a quick and non-cross-browser friendly divider */
 .content .span3 {
   margin-left: 0;
